Add version 1.1.0
- Add handling translation unit identifiers attributes
- Improvement sourcecode
- Improvement and extended README.md
- Extended tests (spy tests for caching vs. create catalog)